<resources>
    <string name="app_name">workingTimerV2</string>
    <string name="login_header">Sign in</string>
    <string name="login_username">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up">Register</string>
    <string name="donthave_acc">Don\'t have an account?</string>
    <string name="username">User Name</string>
    <string name="already_haveAcc">Already have an account?</string>
    <string name="register_header">Register</string>
    <string name="hello_message">Hello Omar \nHow are you today</string>

</resources>