<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.workingtimerv2.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundi">

        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/full_margin"
                android:layout_marginTop="@dimen/full_margin"
                android:layout_marginEnd="@dimen/full_margin"
                android:text="@string/login_header"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressLayout"
                style="@style/TextInputStyle"
                android:layout_width="315dp"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/full_margin"
                android:layout_marginTop="@dimen/full_margin"
                android:layout_marginEnd="@dimen/full_margin"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:error="@{vm.emailError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EmailAddressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"
                    android:hint="@string/login_username"
                    android:imeOptions="actionNext"
                    android:text="@={vm.email}"
                    android:textColor="@color/white"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/line">

            </View>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/TextInputStyle"
                android:layout_width="315dp"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/full_margin"
                android:layout_marginTop="@dimen/full_margin"
                android:layout_marginEnd="@dimen/full_margin"
                android:autofillHints="password"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameLayout"
                app:passwordToggleEnabled="true"
                app:error="@{vm.passwordError}"
                android:textColorHint="@color/white"
                app:passwordToggleTint="@color/purple_500"
                tools:ignore="UnusedAttribute">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"
                    android:hint="@string/login_password"
                    android:textColor="@color/white"
                    android:text="@={vm.password}"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/line">

            </View>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgotPasswordButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/double_margin"
                android:text="@string/login_forgot_password"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="315dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/sign_in_btn"
                    android:textColor="?attr/colorOnPrimarySurface"
                    app:cornerRadius="10dp"
                    android:onClick="@{()->vm.login()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/teal_200"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@id/loginButton"
                    app:layout_constraintEnd_toEndOf="@id/loginButton"
                    app:layout_constraintStart_toStartOf="@id/loginButton"
                    app:layout_constraintTop_toTopOf="@id/loginButton"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUptxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/full_margin"
                    android:layout_marginEnd="@dimen/full_margin"
                    android:layout_marginBottom="@dimen/full_margin"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:textColor="@color/purple_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.139"
                    app:layout_constraintStart_toEndOf="@id/dont_have_acc"
                    app:layout_constraintTop_toBottomOf="@id/loginButton"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dont_have_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donthave_acc"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/max_margin"
                    android:layout_marginTop="@dimen/full_margin"
                    android:layout_marginBottom="@dimen/full_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginButton"
                    app:layout_constraintEnd_toStartOf="@+id/signUptxt"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>
</layout>
